--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 Codes/Hog_Data/RNAspots.mat
+Codes/Final_Figures/SupMat/S1/.DS_Store
+Codes/Final_Figures/SupMat/S10/.DS_Store
+Codes/Final_Figures/SupMat/S11/.DS_Store
+Codes/Final_Figures/SupMat/S2/.DS_Store
+Codes/Final_Figures/SupMat/S3/.DS_Store
+Codes/Final_Figures/SupMat/S4/.DS_Store
+Codes/Final_Figures/SupMat/S5/.DS_Store
+Codes/Final_Figures/SupMat/S7/.DS_Store
+Codes/Final_Figures/SupMat/S8/.DS_Store
+Codes/Final_Figures/SupMat/S9/.DS_Store
+Codes/Fit_Results/.DS_Store
+Codes/Fit_Results/CTT1_0p2and0p4/.DS_Store
