--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ Codes/Final_Figures/SupMat/S8/.DS_Store
 Codes/Final_Figures/SupMat/S9/.DS_Store
 Codes/Fit_Results/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/.DS_Store
+Codes/Final_Figures/.DS_Store
+Codes/.DS_Store
+Codes/Figures/.DS_Store
+Codes/Fit_Results/STL1_0p2and0p4/.DS_Store
+Codes/Fit_Results/STL1_0p2and0p4/NonSpatial/.DS_Store
+Codes/Hog_GUI/.DS_Store
+Codes/solvers/.DS_Store
