--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ Codes/Fit_Results/STL1_0p2and0p4/.DS_Store
 Codes/Fit_Results/STL1_0p2and0p4/NonSpatial/.DS_Store
 Codes/Hog_GUI/.DS_Store
 Codes/solvers/.DS_Store
+Codes/solvers/moments/.DS_Store
+Codes/Hog_Data/.DS_Store
+Codes/Fit_Results/CTT1_0p2and0p4/Spatial/.DS_Store
+Codes/Fit_Results/CTT1_0p2and0p4/Spatial/Distributions/.DS_Store
