--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ Codes/solvers/moments/.DS_Store
 Codes/Hog_Data/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/Spatial/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/Spatial/Distributions/.DS_Store
+Codes/Fit_Results/CTT1_0p2and0p4/Spatial/Distributions/4State_k21only_noloop/Analyses.mat
