--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Codes/Hog_Data/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/Spatial/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/Spatial/Distributions/.DS_Store
 Codes/Fit_Results/CTT1_0p2and0p4/Spatial/Distributions/4State_k21only_noloop/Analyses.mat
+.DS_Store
